# dice-nine

./: CHANGELOG.md  README.md  RUN_TESTS  TEST_COVERAGE  dice9_examples_based_on_rpg_stackexchange_questions.ipynb  dino.py  minimal.py  pyproject.toml  setup.py
scratch/: destruct.py  kth.py  minimal.py  rpgse1.py
src/dice9/: __init__.py  algebra.py  analysis.py  common.py  config.py  environment.py  exceptions.py  factor.py  frame.py  hash.py  implementation.py  math.py  problib.py  stats.py  utils.py
src/dice9/backends/: numpy_impl.py  tensorflow_impl.py  torch_impl.py
src/examples/: chifight.py  crp.py  dino.py  dino_faster.py  explode.py  matching.py  median.py  minipoly.cpp  minipoly.py  weapon.py
src/examples/rpg.stackexchange.com/: .doubling.py.swp
tests/: common.py  test_alg.py  test_cmds.py  test_errors.py  test_fns.py  test_ops.py  test_regressions.py  test_subscripts.py  test_various.py
